# scripts

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CheckPythonEnvs  GEMINI.md  LLM-README.md  SETUP_GUIDE.md  Understanding-Machine-Learning-Theory-Algorithms.md  add_submodule.sh  bootstrap.ps1  bootstrap.sh  copy-for-llms copy.py  copy-for-llms.py  db_util.py  findLargestFile.sh  hash_util.py  msync.py  o2msync.py  omsync.py  path-machine.tmp  path.tmp  rsyncAndroidToSlice.sh  run_tests.py  setup.py  setup.sh  setup_errors.log.last  setup_errors.txt  setup_errors_file_list.txt  t.txt  test.py  tmpsetup.py  video_processor.py  videowork.txt
modules/agt/: __init__.py  cli.py  client.py  probe_webapi.py  pyproject.toml  todo-prio1.md  todo.md  tokens.py  waicli.py
modules/agt/agt/: __init__.py  agent.py  cli.py  client.py  completion.py  ingest.py  sessions.py  tokens.py  tools.py  tui.py  wai_cli.py
modules/agt/tests/: agent_test.py  cli_test.py  gemini_ping_test.py  health_client_test.py  ingest_test.py  integration_test.py  sessions_test.py  tokens_test.py  tui_smoke_test.py
modules/ai_orchestrator/: README.md  VECTORIZATION.md  pyproject.toml
modules/ai_orchestrator/ai_orchestrator/: __init__.py  cli.py  cli_manager.py  db_interface.py  model_manager.py
modules/ai_orchestrator/tests/: __init__.py  cli_manager_test.py  model_manager_test.py
modules/clipboard_tools/: ClipboardModule.psm1  README.md  TROUBLESHOOTING.md  __init__.py  buffers.py  entrypoints.py  pyproject.toml  tmux_bridge.py
modules/clipboard_tools/tests/: buffers_test.py  conftest.py  copy_to_clipboard_test.py  entrypoints_test.py  output_to_clipboard_test.py  replace_with_clipboard_test.py
modules/clipboard_utils/: README.md  __init__.py  clipboard_utils.py  old.clipboard_utils.py  pyproject.toml  setup.py  setup.py.bak
modules/code_tools/: README.md  __init__.py  func_replacer.py  pyproject.toml  rgcodeblock_cli.py  tmp.pytest  tmp.pytest1  unpaired_finder.py
modules/code_tools/rgcodeblock_lib/: __init__.py  (+2 more)
modules/cross_platform/: API_DOC.md  README.md  __init__.py  api.md  clipboard_utils.py  debug_utils.py  diff.diff  file_system_manager.py  fs_utils.py  history_utils.py  network_utils.py  package_selector.ps1  permissions_utils.py  privileges_manager.py  pyproject.toml  size_utils.py  system_utils.py  tmux_utils.py
modules/debug_utils/: __init__.py  debug_utils.py  old.debug_utils.py  pyproject.toml  setup.py  tmpdebyg_utils.py
modules/diff_utils/: README.md  __init__.py  diff.py  dir_diff.py  pyproject.toml  python_diff.py
modules/dlmanager/: guide.md  ideas.txt  pyproject.toml
modules/edit_commands/: README.md  cli.py  core.py  edit_commands.py  executor.py  pyproject.toml  setup.py
modules/file_utils/: FILTER_STACK_DESIGN.md  LISTER_ENHANCEMENT_PLAN.md  PLAN.md  README.md  REFACTORING_SUMMARY.md  REPLACER_INTERACTIVE_DESIGN.md  __init__.py  checkhealth.txt!  cli.py  diskspace.py  duplicate_finder.py  file_manager.py  file_type_colors.json  file_utils.py  filter_stack.py  latest-file_utils-issues.txt  lister.py  path_ops.py  plan-addendums.md  pyproject.toml  pyyestrrsults.txt  replacer.py  replacer_operations.py  replacer_state.py  session.vim  setup.py  todo-detailed-instructions.md  todo-disk-additions1.md  todo-disk-space-task.md  utils.py  wsltool.py
modules/history_watcher/: README.md  __init__.py  history_watcher.py  pyproject.toml
modules/imageshrink/: IMAGE_PERCEPTUAL_PLAN.md  pyproject.toml
modules/knowledge_manager/: BRIEFING_FOR_NEXT_SESSION.md  Claude-Opus-Deep-Research.md  DEEP_RESEARCH_QUERY.md  DEEP_RESEARCH_QUERY_V2.md  IMPLEMENTATION_STATUS.md  POSTGRESQL_MIGRATION_STATUS.md  README.md  REPO_MIGRATION_PLAN.md  RESEARCH_PACKAGE_SUMMARY.md  RESEARCH_TODO.md  TODOS.md  backup.py  claude-summary.md  cleanup_test_projects.py  cli.py  db.py  db_postgres.py  errors.txt  km-pytest-testults.txt  km_tui.css  linkfile.py  links.py  llm-project-parser-status.txt  models.py  package-lock.json  plans.md  progress.md  project_ops.py  pyproject.toml  pytest-results.txt  run.sh  task_ops.py  task_queue.py  tui.py  utils.py
modules/llm-interface/: API_CREATION.md  another-llm-output-syntax.md  api-instructions.md  api_doc_generator.py  api_validator.py  conftest.py  llm-interface.kmproj  new_service.py  pyproject.toml
modules/llm-models/: README.md  pyproject.toml
modules/llm-patcher/: __init__.py  __main__.py  applier.py  cli.py  instructions.md  llm-patch-applier.py  pyproject.toml  reaearch.md
modules/lmstui/: hier.txt  lmst.py  pyproject.toml
modules/mypysetup/: README.md  pyproject.toml
modules/orchestrator_web_viewer/: README.md  pyproject.toml  requirements.txt
modules/parallel_runner/: README.md  parallel_runner_old_1.py  pyproject.toml  setup.py
modules/phonemon/: pyproject.toml
modules/poe2craft/: cli.py  consumables.json  models.py  omens.json  pricesC.json  progress.py  pyproject.toml  requirements.txt
modules/procparsers/: API_DOC.md  __init__.py  aebndl.py  fastmeta.py  pyproject.toml  rclone.py  rsync.py  scp.py  stream.py  utils.py  yt_dlp.py
modules/python_setup/: pyproject.toml  setup.md
modules/rrbackup/: GOOGLE_DRIVE_SETUP.md  README.md  RETENTION_SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  TESTING_SUMMARY.md  __init__.py  config.toml  dbackups  pyproject.toml  pytest-results-post-rclone-connect.txt  pytest-results.txt  pytest.ini  rabbith0l3  setup-wizard.md  summary-todo.md  summary-todo2.md  todo.txt
modules/script_manager/: README.md  __init__.py  env_setup.py  modules.py  pyproject.toml  requirements.py  scripts.py  setup.py.bak  tests.py  utils.py
modules/standard_ui/: README.md  __init__.py  pyproject.toml  standard_ui.py
modules/syncmux/: PLANNING-AND-STATUS.md  Python Cross-Device Tmux Manager Plan.txt  README.md  config.yml.example  handoff.md  latest-plan.md  main.py  minimal-plan.txt  pyproject.toml
scripts_setup/: alias_utils.py  definition_utils.py  function_utils.py  pyproject.toml  setup.py  setup_path.py  setup_pwsh_paths.py  setup_pwsh_profile.py  setup_utils.py  setup_wsl2.py  undo_setup2toml.sh
(+787 files in other folders)
