[build-system]
requires = [ "setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "scripts_setup_utils"
version = "1.0.0"
description = "Utility scripts for setting up the scripts repository"
requires-python = ">=3.6"
dependencies = []
[[project.authors]]
name = "Maxwell Carlson"
email = "carlsonamax@gmail.com"

[tool.setuptools.packages.find]
