[build-system]
requires = [ "setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "clipboard_utils"
version = "1.0.0"
description = "Cross-platform clipboard utility for Python. Supports Android termux, pwsh, and Linux"
requires-python = ">=3.6"
dependencies = []
[[project.authors]]
name = "Maxwell Carlson"
email = "carlsonamax@gmail.com"

[tool.setuptools.packages.find]
