[build-system]
requires = [ "setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "debug_utils"
version = "1.0.0"
description = "Cross-platform debug logging utility for Python."
requires-python = ">=3.6"
dependencies = []
[[project.authors]]
name = "Maxwell Carlson"
email = "carlsonamax@gmail.com"

[tool.setuptools.packages.find]
