[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debug_utils"
version = "1.0.0"
description = "Cross-platform debug logging utility for Python."
requires-python = ">=3.6"
dependencies = [
    "GitPython"
]

[[project.authors]]
name = "Maxwell Carlson"
email = "carlsonamax@gmail.com"

[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
    "twine"
]

[tool.setuptools.packages.find]
