[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "directory-diff"
version = "0.1.0"
description = "A robust, cross-platform directory diff tool for comparing and synchronizing directories."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "colorama"
    # Add additional dependencies if needed (e.g., if your cross_platform modules come via PyPI)
]

[project.scripts]
# This will install a command-line entry point "diff" that runs the main() in diff.py.
diff = "diff:main"
