[build-system]
requires = [ "setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "file_utils"
version = "1.3.0"
description = "A Python library for advanced file manipulation and management, including an interactive lister."
requires-python = ">=3.7"
dependencies = [
    "termdash",
    "windows-curses; sys_platform == 'win32'"
]

[[project.authors]]
name = "Your Name"
email = "carlsonamax@gmail.com"

[project.scripts]
"file-util" = "file_utils.cli:main"
"fu" = "file_utils.cli:main"
"fsu" = "file_utils.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["file_utils*"]
