[project]
name = "api-parser"
version = "0.1.0"
description = "Tools for interacting with LLM APIs and managing documentation."

 dependencies = [
    "requests",
    "prompt-toolkit",
    "rich",
]

[project.scripts]
api-parser = "api_parser.cli:main"

[tool.setuptools.packages.find]
include = ["api_parser", "json_replacer", "sandr"]
