[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-models"
version = "0.1.0"
description = "Registry and downloader utilities for high-quality quantized coding models."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Maxwell Carlson", email = "carlsonamax@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.25.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.12.0"
]

[tool.setuptools.packages.find]
where = ["."]
