[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmstui"
version = "0.1.0"
description = "Termux-friendly CLI/TUI helpers for LM Studio REST/OpenAI-compatible servers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Max" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
lmstui = "lmstui.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["lmstui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
