[build-system]
requires = [ "setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "parallel_runner"
version = "0.1.0"
description = "."
requires-python = ">=3.6"
dependencies = [ "rich",]
[[project.authors]]
name = "Maxwell Carlson"
email = "carlsonamax@gmail.com"

[tool.setuptools.packages.find]
