[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "procparsers"
version = "0.1.0"
description = "Parsers for CLI tool output streams (currently yt-dlp and aebn-dl)."
requires-python = ">=3.9"
keywords = ["yt-dlp", "aebn-dl", "parsers", "cli", "stdout", "log"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5.0",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/your-org/procparsers"
Issues = "https://github.com/your-org/procparsers/issues"

[tool.hatch.build.targets.wheel]
packages = ["procparsers"]

[tool.hatch.build.targets.sdist]
include = [
  "procparsers",
  "tests",
  "pyproject.toml",
]

# ------------------------
# Quality / Testing Tools
# ------------------------

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = ["*_test.py"]

[tool.coverage.run]
branch = true
source = ["procparsers"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
# Target modern Python; keep the config light by default.
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
