[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rrbackup"
version = "0.2.0"
description = "Cross-platform Restic + Rclone backup CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Max", email = "max@example.com" }]
license = { text = "MIT" }
dependencies = [
    "tomli; python_version < '3.11'",
    "tomli-w",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
rrb = "rrbackup.cli:main"
rrbackup = "rrbackup.cli:main"

[tool.setuptools.packages.find]
# Discover packages from project root (flat layout)
include = ["rrbackup*"]
exclude = ["tests*"]
