[build-system]
requires = [ "setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "script_manager"
version = "0.1.0"
requires-python = ">=3.6"
dependencies = []
[[project.authors]]

[project.scripts]
console_scripts = [ "create-module=script_manager.cli.create_module:main", "make-executable=script_manager.cli.make_executable:main",]

[tool.setuptools.packages.find]
