[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standard_ui"
version = "0.1.0"
description = "A standardized UI framework for console output built on Rich."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Maxwell Carlson", email = "carlsonamax@gmail.com" }
]
dependencies = [
    "rich>=12.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
