
[tool.poetry]
name = "syncmux"
version = "0.1.0"
description = "A centralized, cross-device tmux session manager."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.58.0"
asyncssh = "^2.14.2"
pyyaml = "^6.0.1"
pydantic = "^2.7.1"
pywin32 = { version = "*", platform = "win32" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
